# ad-image-generator

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dedupe.rs  docker-compose.yml  post.rs  run-config.yaml  template.yml
adgen-ui/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json
adgen-ui/src/: App.tsx  index.css
adgen-ui/src/components/: AuthPage.tsx  ConfigEditor.tsx  CostDashboard.tsx  LandingPage.tsx  RunMonitor.tsx  TemplateEditor.tsx
adgen-ui/src/lib/: api.ts  config.ts  schema.ts
migrations/: 20260210001835_create_users_table.sql
src/: api.rs  auth.rs  backoff.rs  config.rs  cost_tracking.rs  dedupe.rs  events.rs  io.rs  main.rs  manifest.rs  mod.rs  orchestrator.rs  post.rs  postgres.rs  prompts.rs  providers.rs  rate_limit.rs  rewrite.rs
