[package]
name = "adgen"
version = "0.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["clock"] }
image = "0.24"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "io-util"] }
