[package]
name = "adgen"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "0.4", features = ["clock"] }
image = "0.24"
img_hash = "3"
imageproc = "0.23"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "gzip", "stream"] }
rusttype = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
