[package]
name = "adgen"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.21.6"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5.20", features = ["derive"] }
image = "0.25.5"
img_hash = "3"
imageproc = "0.24.0"
indicatif = "0.17"
parking_lot = "0.12"
rand = "0.9.0"
reqwest = { version = "0.12.3", features = ["json", "gzip", "stream"] }
rusttype = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
sha2 = "0.10"
slug = "0.1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15.7"
axum = "0.8.6"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
